# dab-tree

./: 1  2  3  4  5  BATCH_DATA_FILE  CMakeLists.txt  Makefile  README.md  pythonAPI.py  run.sh
data/: CMakeLists.txt  Makefile  dabTree.proto  data.proto  data_test.py  matrix.proto  py_test.py  tree.proto  tree_test.py
iPython_test/: dab-tree_test.ipynb  test.csv
include/: ThreadPool.h  cluster.h  data.h  matrix.h  message_tree.h  proto_func.h  trainer.h  tree.h
src/: main.cc
src/cluster/: cluster.cc
src/core/: data.cc  matrix.cc  tree.cc
src/protobuf/: load_data.py  read_proto.cc  write_proto.cc
src/trainer/: trainer.cc
tests/: CMakeLists.txt  test_data.cc  test_trainer.cc  test_tree.cc
